--- a/UdemyIdentityServer.API1/UdemyIdentityServer.API1.csproj
+++ b/UdemyIdentityServer.API1/UdemyIdentityServer.API1.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.8" />
+  </ItemGroup>
+
 
 </Project>
