--- a/UdemyIdentityServer.Client1/UdemyIdentityServer.Client1.csproj
+++ b/UdemyIdentityServer.Client1/UdemyIdentityServer.Client1.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="IdentityModel" Version="4.4.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+  </ItemGroup>
+
 </Project>
