Custom Üyelik Sistemi-2/3(Merkezi)

--- a/UdemyIdentityServer.AuthServer/appsettings.json
+++ b/UdemyIdentityServer.AuthServer/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "LocalDb": "Data Source=EXCALIBUR\\SQLEXPRESS;Initial Catalog=UdemyIdentityServerMembershipDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
