--- a/UdemyIdentityServer.AuthServer/UdemyIdentityServer.AuthServer.csproj
+++ b/UdemyIdentityServer.AuthServer/UdemyIdentityServer.AuthServer.csproj
@@ -6,6 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="4.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
