Resource Owner Credentials Grant-5/6/7

--- a/UdemyIdentityServer.Client1/appsettings.json
+++ b/UdemyIdentityServer.Client1/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "AuthServerUrl": "https://localhost:5001",
+
+  "ClientResourceOwner": {
+    "ClientId": "Client1-ResourceOwner-Mvc",
+    "ClientSecret": "secret"
+  },
+
   "Client": {
     "ClientId": "Client1",
     "ClientSecret": "secret"
